syntax = "proto3";

option csharp_namespace = "node";

service BootNode {
  rpc AddLink (LinkRequest) returns (LinkReply);
  rpc SendSimpleMessage (SimpleMessage) returns (SimpleMessageReply);
}

message LinkRequest {
  string clientAddr = 1;
}

message LinkReply {
  string message = 1;
}

message SimpleMessage {
  string clientAddr = 1;
}

message SimpleMessageReply {
  string message = 1;
}